--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
     "astro": "^5.15.1",
+    "nanostores": "^1.0.1",
     "tailwindcss": "^4.1.16"
   }
 }
