--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/sitemap": "^3.6.0",
     "@tailwindcss/vite": "^4.1.16",
     "astro": "^5.15.1",
+    "family-chart": "^0.9.0",
     "nanostores": "^1.0.1",
     "tailwindcss": "^4.1.16"
   }
